<resources>
    <string name="app_name">Boss</string>
    <string name="Login">Login</string>
    <string name="verify">Verify</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_live">Live</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="no_bio_yet">No bio yet</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="add_website_link">Add Website Link</string>
    <string name="username_is_your_unique_identity_on_boss_nonce_you_chance_it_you_won_t_be_able_to_n_change_again_within_30_days">Username is your unique identity on Boss.\nOnce you chance it, you won\'t be able to \nchange again within 30 days</string>
    <string name="empty_error">empty error</string>
    <string name="invalid_email">invalid email</string>
    <string name="enter_ten_digits_number">enter ten digits number</string>
    <string name="valid_number">valid number</string>
    <string name="password_not_match">password not match</string>
    <string name="amount_valid">amount valid</string>
    <string name="aadhaar_valid">aadhar valid</string>
    <string name="pan_card_valid">pan card valid</string>
    <string name="ifsc_valid">ifsc valid</string>
    <string name="business_development">Business Development</string>
    <string name="settings">Settings</string>
    <string name="discover_people">Discover People</string>
    <string name="blocked">Blocked</string>
    <string name="FeedBack">FeedBack</string>
    <string name="RateBoss">Rate Boss</string>
    <string name="ShareBoss">Share Boss</string>
    <string name="Faq">Faq</string>
    <string name="AboutUs">About Us</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="LogOut">Log Out</string>
    <string name="mansi_bhardwaj">Mansi Bhardwaj</string>
    <string name="report">Report</string>
    <string name="block_user">Block User</string>
    <string name="search_blogs_category">Search Blogs Category</string>
    <string name="options">Options</string>
    <string name="follow">Follow</string>
    <string name="user_unknown">User Unknown</string>
    <string name="self_employed">Self-Employed</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_to_continue_streaming">Login to Continue Streaming</string>
    <string name="enter_mobile_no_to_login_via_otp">Enter mobile no to login via OTP</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name_">Full Name*</string>
    <string name="enter_mobile_number_">Enter Mobile Number*</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="user_image">User Image</string>
    <string name="anju_gupta">Anju Gupta</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_business_if_your_actions_inspire_others_to_dream_more_learn_more_do_more_and_become_more_you_are_a_leader">About Business : “If your actions inspire others to dream more, learn more, do more and become more, you are a leader.”</string>
    <string name="back_button">Back Button</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="arrow">Arrow</string>
    <string name="logo">Logo</string>
    <string name="save">Save</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="gender">Gender</string>
    <string name="calendar">Calendar</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="link">Link</string>
    <string name="we_provide_architecture_drawing_plumbing_online_service">...#we provide architechure drowing / plumbing/onlineservice</string>
    <string name="like">Like</string>
    <string name="_5_lakh">5 lakh</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="dislike">Dislike</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="relations">Relations</string>
    <string name="comments">Comments</string>
    <string name="comment_here">Comment here</string>
    <string name="post">Post</string>
    <string name="_0_views">0 Views</string>
    <string name="like_amp_unlike"><![CDATA[Like & Unlike]]></string>
    <string name="banner_image">Banner Image</string>
    <color name="gray_light">#BDB9B9</color>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="app_record">Start</string>
    <string name="view_count">%1$i Views</string>
    <string name="upload_fab">Upload Fab</string>
    <string name="description">Description</string>


    <string name="facebook_app_id">631244981816934</string>
    <string name="facebook_client_token">fc4529aa32e0f6c605df2f34673c4021</string>

    <!--    <string name="facebook_app_id">1168267117070490</string>
        <string name="facebook_client_token">d3196831f19fd045f55ba9faecd9c99b</string>-->
</resources>