<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdpq"
        android:layout_marginBottom="@dimen/_10sdpq"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdpq"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="45.0dip"
                android:layout_marginStart="6.0dip"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:tag="binding_2"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdpq"
            android:layout_gravity="center"
            android:src="@drawable/ic_login"
            android:contentDescription="@string/Login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdpq"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="2"
                android:text="@string/login_to_continue_streaming"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdpq"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_horizontal"
                android:text="@string/enter_mobile_no_to_login_via_otp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:layout_marginTop="@dimen/_40sdpq"
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bg_login_input"
            android:drawableStart="@drawable/ic_outline_call"
            android:drawablePadding="@dimen/_5sdpq"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_mobile_no"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/_12sdpq"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:theme="@style/AppTheme1"
            android:importantForAutofill="no" />

        <soup.neumorphism.NeumorphCardView
            style="@style/Widget.Neumorph.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdpq"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_responsive"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/login_to_continue"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </soup.neumorphism.NeumorphCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>