<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdpq">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdpq"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="45.0dip"
                android:layout_marginStart="6.0dip"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_vertical"
                android:tag="binding_2"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_15sdpq"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_15sdpq"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                app:cardCornerRadius="@dimen/_50sdp"
                app:cardBackgroundColor="#EBF1FD"
                app:cardElevation="0dp"
                android:id="@+id/cv_user_image"
                android:layout_marginBottom="@dimen/_30sdpq">

                <ImageView
                    android:id="@+id/ic_user_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minWidth="@dimen/_50sdp"
                    android:minHeight="@dimen/_50sdp"
                    android:maxHeight="@dimen/_100sdp"
                    android:maxWidth="@dimen/_100sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_camera"
                    android:contentDescription="@string/user_image" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_bg_login_input"
                android:drawableStart="@drawable/ic_person_svgrepo_c"
                android:drawablePadding="@dimen/_5sdpq"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/full_name_"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_12sdpq"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/AppTheme1" />

            <EditText
                android:id="@+id/edt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdpq"
                android:background="@drawable/custom_bg_login_input"
                android:drawableStart="@drawable/ic_outline_call"
                android:drawablePadding="@dimen/_5sdpq"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_mobile_number_"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/_12sdpq"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/AppTheme1" />

            <EditText
                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdpq"
                android:background="@drawable/custom_bg_login_input"
                android:drawableStart="@drawable/ic_mail_svgrepo"
                android:drawablePadding="@dimen/_5sdpq"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_12sdpq"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:theme="@style/AppTheme1" />

        </LinearLayout>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/signUpButton"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdpq"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_responsive"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </soup.neumorphism.NeumorphCardView>

    </LinearLayout>

</ScrollView>